--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -1,11 +1,11 @@
 mysql:
   username: root
-  password: 123456
-  schema: game_manager
+  password: root
+  schema: bootdb
   url: localhost:3306
 
 server:
-  port: 8080
+  port: 8081
   undertow:
     threads:
       worker: 10
