--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,7 +1,7 @@
 mysql:
   username: ${DATABASE_MYSQL_USERNAME:root}
-  password: ${DATABASE_MYSQL_PASSWORD:123456}
-  schema: game_manager
+  password: ${DATABASE_MYSQL_PASSWORD:root}
+  schema: bootdb
   url: ${DATABASE_MYSQL_URL:localhost:3306}
 
 spring:
