feat: add publisher-manager validation for create game usecase

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -10,3 +10,7 @@ server:
     threads:
       worker: 10
       io: 2
+
+external:
+  validation:
+    base-url: ${VALIDATION_SERVICE_URL:http://localhost:8080}
