--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Set Spring profile to 'dev'
-        run: echo "spring.profiles.active=dev" >> $GITHUB_ENV
+      - name: Set Spring profile to 'test'
+        run: echo "spring.profiles.active=test" >> $GITHUB_ENV
 
       - name: Build with Maven
         run: mvn clean install -DskipTests=false
 
-      - name: Run tests with profile 'dev'
-        run: mvn test -Dspring.profiles.active=dev
+      - name: Run tests with profile 'test'
+        run: mvn test -Dspring.profiles.active=test
