--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -14,3 +14,5 @@ server:
 external:
   validation:
     base-url: ${VALIDATION_SERVICE_URL:http://localhost:8080}
+  registration:
+    base-url: ${REGISTRATION_SERVICE_URL:http://localhost:8080}
